# obsidian_youtube_notes

./: .envrc.example  .gitignore  README.md  TODO.md  pyproject.toml  run_process.py
docs/adr/: 002-service-container-design.md
src/yt_obsidian/: config.py  container.py  main.py  model_configs.py  processor.py  utils.py
src/yt_obsidian/clients/: openai_compatible_client.py  transcript_client.py  youtube_client.py
src/yt_obsidian/writers/: markdown_writer.py
tests/: test_cli.py  test_container.py  test_main.py  test_main_container.py  test_markdown_writer.py  test_openai_compatible_client.py  test_transcript_client.py  test_youtube_client.py
