[tool.poetry]
name = "obsidian-youtube-notes"
version = "0.1.0"
description = "Generate rich markdown notes from YouTube channels and playlists"
authors = ["Your Name <you@example.com>"]
packages = [{include = "yt_obsidian", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.0.0"
youtube-transcript-api = "^0.5.0"
pydantic = "^2.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
click = "^8.0"
pytest = { extras = ["async"], version = "^7.0", optional = true }
pyyaml = "^6.0"
tenacity = "^8.2.3"
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
flake8 = "^6.0"
isort = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"